Compatibilidad con Java 8, List.of por Arrays.asList