@@ -1,5 +1,6 @@
 package utn.tacs.grupo3.telegram.bot.handler.command;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.telegram.telegrambots.meta.api.methods.BotApiMethod;
@@ -46,6 +47,6 @@ public class HelpCommandHandler implements CommandHandler{
 		
 		answer.setText(text);
 		
-		return List.of(answer);
+		return Arrays.asList(answer);
 	}
 }
